--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DCreativo || Creatividad Ilimitada</title>
     <link rel="stylesheet" href="css/ed-grid.css" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="ed-container">
@@ -14,7 +14,12 @@
           <div>
             <img src="img/logo.svg" alt="" width="250" />
             <h2 class="s-pt-2">Web Site en construcción</h2>
-            <p class="s-mt-1">Tel.: 937 835 463<br>E-mail: <a href="mailto:dcreativo.peru@gmail.com">dcreativo.peru@gmail.com</a></p>
+            <p class="s-mt-1">
+              Tel.: 937 835 463<br />E-mail:
+              <a href="mailto:dcreativo.peru@gmail.com"
+                >dcreativo.peru@gmail.com</a
+              >
+            </p>
           </div>
         </div>
       </div>
