desarrollando el sitio

--- a/index.html
+++ b/index.html
@@ -10,17 +10,8 @@
   <body>
     <div class="ed-container">
       <div class="ed-item">
-        <div class="s-cross-center s-main-center s-center logo">
-          <div>
+        <div class="s-cross-center s-main-center s-center">
             <img src="img/logo.svg" alt="" width="250" />
-            <h2 class="s-pt-2">Web Site en construcción</h2>
-            <p class="s-mt-1">
-              Tel.: 937 835 463<br />E-mail:
-              <a href="mailto:dcreativo.peru@gmail.com"
-                >dcreativo.peru@gmail.com</a
-              >
-            </p>
-          </div>
         </div>
       </div>
     </div>
